# roq-samples

./: .gitignore  CMakeLists.txt
conf/: mmaker.toml
src/roq/mmaker/: CMakeLists.txt  README.md  application.cpp  application.h  config.cpp  config.h  flags.h  main.cpp  model.cpp  model.h  model.inl  strategy.cpp  strategy.h  strategy.inl
src/roq/mmaker/flags/: CMakeLists.txt  flags.cpp  flags.h
src/roq/shared/: api.h  bitmask.h  config.h  config.inl  ema.cpp  ema.h  grid_order.h  grid_order.inl  instrument.cpp  instrument.h  levels.h  limits.h  model.h  model.inl  order.h  order_map.h  order_map.inl  order_traits.h  portfolio.h  price.h  quote.h  ranges.h  strategy.cpp  strategy.h  strategy.inl  type_traits.h  vars.h
test/: CMakeLists.txt  grid_order.cpp  main.cpp
